--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@sentry/node": "^10.19.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@willsoto/nestjs-prometheus": "^6.0.2",
@@ -38,11 +39,13 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "nestjs-pino": "^4.4.1",
+    "pg": "^8.16.3",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.2",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -53,6 +56,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
