--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky"
+    "prepare": "husky",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/database/typeorm.config.ts",
+    "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/database/typeorm.config.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/database/typeorm.config.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/database/typeorm.config.ts",
+    "schema:drop": "typeorm-ts-node-commonjs schema:drop -d src/database/typeorm.config.ts",
+    "schema:sync": "typeorm-ts-node-commonjs schema:sync -d src/database/typeorm.config.ts",
+    "db:test": "ts-node src/database/test-connection.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
