--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "migration:show": "typeorm-ts-node-commonjs migration:show -d src/database/typeorm.config.ts",
     "schema:drop": "typeorm-ts-node-commonjs schema:drop -d src/database/typeorm.config.ts",
     "schema:sync": "typeorm-ts-node-commonjs schema:sync -d src/database/typeorm.config.ts",
-    "db:test": "ts-node src/database/test-connection.ts"
+    "db:test": "ts-node src/database/test-connection.ts",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "dev:setup": "node -e \"require('child_process').execSync(process.platform === 'win32' ? 'scripts\\\\dev-setup.bat' : 'bash scripts/dev-setup.sh', {stdio: 'inherit'})\"",
+    "db:reset": "node -e \"require('child_process').execSync(process.platform === 'win32' ? 'scripts\\\\db-reset.bat' : 'bash scripts/db-reset.sh', {stdio: 'inherit'})\"",
+    "validate": "node scripts/validate-setup.js"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
@@ -39,9 +45,11 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@sentry/node": "^10.19.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
